# chytrosti

./: .gitignore  CNAME  Makefile  README.md  archives.html  authors.html  categories.html  cecko-pac-veci-kterych-byste-si-fakt-meli-vsimnout.html  ceckove-vyrazy-a-vyroky.html  chocolatey.html  dbi.html  deleni-v-pevne-radove-carce.html  generovani-zvuku-zaklady.html  git.html  index.html  index2.html  mit.html  mitka.html  oddelena-kompilace-a-vlastni-knihivny.html  oddelena-kompilace-a-vlastni-knihovny.html  pelicanconf.py  pip-a-venv.html  pip.html  pouziti-casovace-jako-generatoru-pwm.html  prg.html  projektove-ulohy-mit-20242025.html  projektove-ulohy-mit.html  psk.html  pskcko.html  publishconf.py  pyproject.toml  requirements-funguje.txt  requirements.txt  search-index.st  search.html  search.toml  sit.html  site.html  stm8oss.html  tags.html  (+7 more)
author/: jakub-zahalka.html  marrek-nozka.html  marrek-nozka2.html  marreknozka.html
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
category/: mitka.html  programovani.html  pskacko.html  pskcko.html  site.html
content/: MIT.rst  PSK.rst  SIT.rst  c_statements.rst  chocolatey.md  codium.md  git.md  links.mdx  pip.md  udelatka-CI_MIT.md
drafts/: udelatka-do-cit-a-mit.html
feeds/: all.atom.xml  jakub-zahalka.atom.xml  jakub-zahalka.rss.xml  marrek-nozka.atom.xml  marrek-nozka.rss.xml  marreknozka.atom.xml  marreknozka.rss.xml  mitka.atom.xml  programovani.atom.xml  pskacko.atom.xml  pskcko.atom.xml  site.atom.xml
pages/: chyba.html  landing-page-about-hidden.html  mitka.html  o-mne.html  o.html  site.html  (+1 more)
(+65 files in other folders)
