[tool.poetry]
name = "pelican_web"
version = "0.1.0"
description = "chytrosti"
authors = ["Marrek Nožka <marek@tlapicka.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "~4.8.0"
typogrify = "^2.0.7"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.12.2"
mdx-include = "^1.4.2"
invoke = "^2.2.0"
livereload = "^2.6.3"
markdown = "~3.3.4"
rtoml = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
